Fix bug with body going past screen width  and allowing horizontal scrolling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 /* Global styles */
-body {
+html, body {
     overflow-x: hidden;
-    max-width: 100%;
+    max-width: 100vw;
 }
 
 /* nav */
